# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Adding yet another patch from Fabio Erculiani <lxnay@lxnaydesign.net> from
  bug #152945.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, generic/linuxrc, genkernel:
  Added a non-braindead version of a patch provided by Fabio Erculiani
  <lxnay@lxnaydesign.net> in bug #160333. This is completely untested, so I'm
  rolling up 3.4.7_pre2 to get it tested prior to genkernel 3.4.7 going final.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> ppc/Pegasos:
  Add a known-working 2.6.16+ kernel config from
  http://www.ppczone.org/downloads/config-2.6.16-pegasos for bug #165758.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.conf:
  Added a note about the MAKEOPTS option to genkernel as suggested in bug
  #165980.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.8:
  Added patch from Mike Frysinger <vapier@gentoo.org> to clean up the
  genkernel man page for bug #166179.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> generic/linuxrc:
  Fix REAL_INIT for bug #160635.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_compile.sh, genkernel:
  Added patch from Fabio Erculiani <lxnay@lxnaydesign.net> to fix unionfs
  compilation. This is for bug #152945.

  08 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_cmdline.sh,
  gen_funcs.sh:
  Added patch from Martin Parm <parmus@diku.dk> to fix the --no-color option.
  This resolves bug #114156.

  15 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_bootloader.sh:
  Changed basename to dirname when creating the directory from grub.conf to
  solve bug #161716.

  09 Jan 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  x86/modules_load, x86_64/modules_load, xen0/modules_load,
  xenU/modules_load: