@@ -7,6 +7,8 @@ KERNEL_BINARY="vmlinux"
 
 USE_DIETLIBC=0
 
+[ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
+
 BOOTSPLASH=0
 
 KERNEL_MAKE=make
@@ -21,6 +23,4 @@ UTILS_AS=as
 UTILS_LD=ld
 
 COMPRESS_INITRD=yes
-
-[ -z "${MAKEOPTS}" ] && MAKEOPTS="-j2"
 
